# high-concurrency-call-scheduller

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  ruff.toml
data/: contacts-10k.csv  sample-contacts.csv
docs/diagrams/: high-concurrency-call-scheduller-architecture-2026-06-20.excalidraw  outbound-scheduller-2026-06-16-1.excalidraw
infra/: Dockerfile
infra/terraform/: lambda.tf  main.tf  outputs.tf  providers.tf
migrations/: env.py
migrations/versions/: 2b601c872658_create_campaign_concurrency.py  440f79ccff62_create_contacts.py  49b9ed1a6d93_add_provider_call_id_to_call_tasks.py  4fd2b6c4ae0e_create_campaigns.py  7facc9da2a48_create_provider_events_and_outcomes.py  ab47448c1438_create_crm_delivery_attempts.py  cb068388bb5a_create_call_tasks.py
scripts/: build_lambda.sh  demo.sh  generate_contacts.py
src/campaign_api/: Dockerfile  main.py  schemas.py
src/common/: aws.py  call_task.py  config.py  db.py  models.py  signing.py
src/crm_worker/: adapter.py  main.py
src/dashboard/: main.py  redrive.py  stats.py
src/dispatch_worker/: adapter.py  main.py
src/ingestion/: db.py  handler.py  parser.py
src/mock_crm/: main.py
src/mock_provider/: main.py
src/outcome_service/: main.py  processing.py
src/scheduler/: claim.py  main.py  reaper.py
tests/campaign_api/: test_api.py
tests/common/: test_aws.py  test_aws_sqs.py  test_call_task.py  test_config.py  test_db_models.py  test_signing.py
tests/crm_worker/: test_adapter.py
tests/dashboard/: test_dashboard_api.py  test_redrive.py  test_stats.py
tests/dispatch_worker/: test_adapter.py
tests/ingestion/: test_handler.py  test_ingestion_db.py  test_parser.py
tests/mock_crm/: test_mock_crm.py
(+7 files in other folders)
