[project]
name = "high-concurrency-call-scheduller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.34",
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "bandit>=1.8.0",
    "httpx>=0.28.1",
    "pip-audit>=2.7.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.2.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
